feat: add list categories endpoint
